[gd_scene load_steps=16 format=3 uid="uid://d13hruxbu3xly"]

[ext_resource type="Script" path="res://Robots.gd" id="1_cwifc"]
[ext_resource type="Texture2D" uid="uid://dtcfjvtert0nj" path="res://robo gamejam/6/Idle.png" id="2_g3ult"]

[sub_resource type="Animation" id="Animation_nxpur"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("robot_anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("robot_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2]
}

[sub_resource type="Animation" id="Animation_edmbl"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("robot_anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("robot_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_jqq6m"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("robot_anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("robot_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_d0ywu"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("robot_anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("robot_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_odw80"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("robot_anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("robot_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5pba"]
_data = {
"RESET": SubResource("Animation_nxpur"),
"hurt": SubResource("Animation_edmbl"),
"idle": SubResource("Animation_jqq6m"),
"run": SubResource("Animation_d0ywu"),
"walk": SubResource("Animation_odw80")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3mtt"]
size = Vector2(41, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pp2h"]
size = Vector2(36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_27lge"]
atlas = ExtResource("2_g3ult")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmk6n"]
atlas = ExtResource("2_g3ult")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_is011"]
atlas = ExtResource("2_g3ult")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iur13"]
atlas = ExtResource("2_g3ult")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_m3bnw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27lge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmk6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is011")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iur13")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Robots" type="CharacterBody2D"]
position = Vector2(208, -18)
script = ExtResource("1_cwifc")

[node name="robot_player" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_v5pba")
}

[node name="robot_hurtbox" type="Area2D" parent="."]

[node name="hurtbox_collision" type="CollisionShape2D" parent="robot_hurtbox"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_n3mtt")
debug_color = Color(1, 0, 0, 0.419608)

[node name="robot_collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_3pp2h")

[node name="robot_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -9)
sprite_frames = SubResource("SpriteFrames_m3bnw")

[node name="timer_chageAGST" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="timer_start_battle" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Weapon_marker1" type="Marker2D" parent="."]
position = Vector2(-6, -3)

[node name="Weapon_marker2" type="Marker2D" parent="."]
z_index = -1
position = Vector2(-2, -3)

[node name="timer_hurt" type="Timer" parent="."]
wait_time = 0.3

[connection signal="area_entered" from="robot_hurtbox" to="." method="_on_robot_hurtbox_area_entered"]
